Implementação do método updateWorkshopManufacturerStatus.
